// Vitest Snapshot v1

exports[`Divider > Divider alignVue demo works fine 1`] = `
<div
  class="demo-6"
>
  <span>
    正直
  </span>
  <div
    class="t-divider t-divider--hairline t-divider--content-left"
    role="separator"
  >
    
    TDesign
    
  </div>
  <span>
    进取
  </span>
  <div
    class="t-divider t-divider--hairline t-divider--content-center"
    role="separator"
  >
    
    TDesign
    
  </div>
  <span>
    合作
  </span>
  <div
    class="t-divider t-divider--hairline t-divider--content-right"
    role="separator"
  >
    
    TDesign
    
  </div>
  <span>
    创新
  </span>
</div>
`;

exports[`Divider > Divider baseVue demo works fine 1`] = `
<div
  class="demo-6"
>
  <h3>
    直线拉通
  </h3>
  <div
    class="t-divider t-divider--hairline"
    role="separator"
  >
    <!---->
  </div>
  <h3>
    直线拉通
  </h3>
</div>
`;

exports[`Divider > Divider horizontalVue demo works fine 1`] = `
<div
  class="demo-6"
>
  <span>
    正直
  </span>
  <div
    class="t-divider t-divider--hairline"
    role="separator"
  >
    <!---->
  </div>
  <span>
    进取
  </span>
  <div
    class="t-divider t-divider--hairline"
    role="separator"
  >
    <!---->
  </div>
  <span>
    合作
  </span>
  <div
    class="t-divider t-divider--hairline"
    role="separator"
  >
    <!---->
  </div>
  <span>
    创新
  </span>
</div>
`;

exports[`Divider > Divider mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-bf2b60a0=""
>
  <h1
    class="title"
    data-v-bf2b60a0=""
  >
    Divider 分割符
  </h1>
  <p
    class="summary"
    data-v-bf2b60a0=""
  >
     分割线是一个呈线状的轻量化组件，起到分割、组织、细化的作用，用于有逻辑的组织元素内容和页面结构。 
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-bf2b60a0=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      分割符主要是由直线和文字组成
    </p>
    
    <div
      data-v-bf2b60a0=""
      style="background: rgb(255, 255, 255);"
    >
      <h3
        data-v-bf2b60a0=""
      >
        直线拉通
      </h3>
      <div
        class="t-divider t-divider--hairline"
        data-v-bf2b60a0=""
        role="separator"
      >
        <!---->
      </div>
      <h3
        data-v-bf2b60a0=""
      >
        虚线拉通
      </h3>
      <div
        class="t-divider t-divider--hairline t-divider--dashed"
        data-v-bf2b60a0=""
        role="separator"
      >
        <!---->
      </div>
      <h3
        data-v-bf2b60a0=""
      >
        左右间距
      </h3>
      <div
        class="t-divider t-divider--hairline demo-2"
        data-v-bf2b60a0=""
        role="separator"
      >
        <!---->
      </div>
      <h3
        data-v-bf2b60a0=""
      >
        右侧拉通
      </h3>
      <div
        class="t-divider t-divider--hairline demo-3"
        data-v-bf2b60a0=""
        role="separator"
      >
        <!---->
      </div>
      <h3
        data-v-bf2b60a0=""
      >
        自定义左侧间距
      </h3>
      <div
        class="t-divider t-divider--hairline demo-4"
        data-v-bf2b60a0=""
        role="separator"
      >
        <!---->
      </div>
      <h3
        data-v-bf2b60a0=""
      >
        文字+直线
      </h3>
      <div
        class="t-divider t-divider--hairline t-divider--content-center demo-5"
        data-v-bf2b60a0=""
        role="separator"
      >
        
         文字信息 
        
      </div>
      <h3
        data-v-bf2b60a0=""
      >
        纯文字
      </h3>
      <div
        class="t-divider t-divider--hairline t-divider--content-center"
        data-v-bf2b60a0=""
        role="separator"
        style="border-color: transparent;"
      >
        
         没有更多了~ 
        
      </div>
      <h3
        data-v-bf2b60a0=""
      >
        垂直分割
      </h3>
      <div
        class="demo-6"
        data-v-bf2b60a0=""
      >
        <span
          data-v-bf2b60a0=""
        >
          文字信息
        </span>
        <div
          class="t-divider t-divider--hairline t-divider-vertical"
          data-v-bf2b60a0=""
          role="separator"
        >
          <!---->
        </div>
        <span
          data-v-bf2b60a0=""
        >
          文字信息
        </span>
        <div
          class="t-divider t-divider--hairline t-divider-vertical"
          data-v-bf2b60a0=""
          role="separator"
        >
          <!---->
        </div>
        <span
          data-v-bf2b60a0=""
        >
          文字信息
        </span>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Divider > Divider verticalVue demo works fine 1`] = `
<div
  class="demo-6"
  data-v-0851d1f8=""
>
  <span
    data-v-0851d1f8=""
  >
    正直信息
  </span>
  <div
    class="t-divider t-divider--hairline t-divider-vertical"
    data-v-0851d1f8=""
    role="separator"
  >
    <!---->
  </div>
  <span
    data-v-0851d1f8=""
  >
    进取
  </span>
  <div
    class="t-divider t-divider--hairline t-divider-vertical"
    data-v-0851d1f8=""
    role="separator"
  >
    <!---->
  </div>
  <span
    data-v-0851d1f8=""
  >
    合作
  </span>
  <div
    class="t-divider t-divider--hairline t-divider-vertical"
    data-v-0851d1f8=""
    role="separator"
  >
    <!---->
  </div>
  <span
    data-v-0851d1f8=""
  >
    创新
  </span>
</div>
`;
